--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -19,7 +19,12 @@
       <ul class="navbar-nav ms-auto">
         <!-- Connexion -->
         <li class="nav-item">
-          <a routerLink="/authentification" routerLinkActive="active" class="nav-link">Connexion CAS</a>
+          <a routerLink="/authentification" routerLinkActive="active" class="nav-link">Connexion</a>
+        </li>
+
+        <!-- Création de compte -->
+        <li class="nav-item">
+          <a routerLink="/register" routerLinkActive="active" class="nav-link">Inscription</a>
         </li>
 
         <!-- Importation -->
@@ -71,4 +76,3 @@
 </nav>
 
 <router-outlet></router-outlet>
-
