--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -17,13 +17,14 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <!-- Connexion -->
-        <li class="nav-item">
-          <a href="https://cas7d.imtbs-tsp.eu/cas/login?service=http://localhost:8080/" routerLinkActive="active" class="nav-link">Connexion CAS</a>
-        </li>
-        
+        <!-- Connexion -->      
         <li class="nav-item">
           <a routerLink="/authentification" routerLinkActive="active" class="nav-link">Connexion</a>
+        </li>
+
+        <!-- Création de compte -->
+        <li class="nav-item">
+          <a routerLink="/register" routerLinkActive="active" class="nav-link">Inscription</a>
         </li>
 
         <!-- Importation -->
