lien entre connexion et inscri

--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -24,7 +24,7 @@
 
         <!-- Création de compte -->
         <li class="nav-item">
-          <a routerLink="/register" routerLinkActive="active" class="nav-link">Inscription</a>
+          <a routerLink="/inscription" routerLinkActive="active" class="nav-link">Inscription</a>
         </li>
 
         <!-- Importation -->
