add ssl and fix lists

--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -19,11 +19,7 @@
       <ul class="navbar-nav ms-auto">
         <!-- Connexion -->
         <li class="nav-item">
-          <a href="https://cas7d.imtbs-tsp.eu/cas/login?service=http://localhost:8080/" routerLinkActive="active" class="nav-link">Connexion CAS</a>
-        </li>
-        
-        <li class="nav-item">
-          <a routerLink="/authentification" routerLinkActive="active" class="nav-link">Connexion</a>
+          <a routerLink="/authentification" routerLinkActive="active" class="nav-link">Connexion CAS</a>
         </li>
 
         <!-- Importation -->
@@ -69,7 +65,7 @@
             <li><a class="dropdown-item" routerLink="/majeure-create">Ajouter Majeure</a></li>
           </ul>
         </li>
-    </ul>
+      </ul>
     </div>
   </div>
 </nav>
