fix load etat affectation

--- a/gestion-tutorat-front/src/app/components/auto-affectation/auto-affectation.component.html
+++ b/gestion-tutorat-front/src/app/components/auto-affectation/auto-affectation.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <h2>Résultat de l'affectation automatique</h2>
-  <button (click)="loadAffectation()"><i class="bi bi-arrow-repeat"></i> Relancer l'affectation</button>
+  <button (click)="loadAffectation()"><i class="bi bi-arrow-repeat"></i> Re/lancer l'affectation</button>
 
   <div *ngIf="loading">Chargement...</div>
   <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
