--- a/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
@@ -1,6 +1,17 @@
 <div style="margin: 1%; margin-right: 2%">
   <div class="table-scroll-wrapper">
     <table mat-table [dataSource]="students" class="mat-elevation-z8">
+      <ng-container matColumnDef="figer">
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Figer</th>
+        <td mat-cell *matCellDef="let element">
+          <input type="checkbox"
+                 [checked]="element.frozen"
+                 (change)="toggleFrozenEtudiant(element)"
+                 [disabled]="loadingFrozen[element.id]"
+          />
+        </td>
+      </ng-container>
+      
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef class="stickyHeader stickyID">Id</th>
         <td mat-cell *matCellDef="let element" class="stickyID">
@@ -206,8 +217,8 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
 </div>
