--- a/gestion-tutorat-front/src/app/components/tuteur-read/tuteur-read.component.html
+++ b/gestion-tutorat-front/src/app/components/tuteur-read/tuteur-read.component.html
@@ -38,14 +38,15 @@
         <span class="value">{{ tuteur?.statut }}</span>
       </div>
       <div class="action-buttons mt-4">
-        <!-- Redirect to the tutor edit page -->
-        <a [routerLink]="['/tuteurs/edit', tuteur.id]" class="btn edit-btn">
-          <i class="bi bi-pencil-square"></i> Éditer
-        </a>
-        <button class="btn delete-btn" (click)="onDeleteTuteur()">
-          <i class="bi bi-trash-fill"></i> Supprimer
-        </button>
-      </div>
+  <a [routerLink]="['/tuteurs/edit', tuteur.id]" class="btn edit-btn">
+    <i class="bi bi-pencil-square"></i> Éditer
+  </a>
+
+  <button class="btn delete-btn" (click)="onDeleteTuteur()" *ngIf="!modeLectureSeul">
+    <i class="bi bi-trash-fill"></i> Supprimer
+  </button>
+</div>
+
       
     </div>
   </div>
