--- a/gestion-tutorat-front/src/app/components/etudiant-create/etudiant-create.component.html
+++ b/gestion-tutorat-front/src/app/components/etudiant-create/etudiant-create.component.html
@@ -10,11 +10,8 @@
         <!-- Email École -->
         <div class="form-group">
           <label>Email École</label>
-          <input
-            type="email"
-            class="form-control"
-            formControlName="emailEcole"
-            [ngClass]="{ 'is-invalid': submitted && f['emailEcole'].invalid }" />
+          <input type="email" class="form-control" formControlName="emailEcole"
+                 [ngClass]="{ 'is-invalid': submitted && f['emailEcole'].invalid }" />
           <div *ngIf="submitted && f['emailEcole'].invalid" class="invalid-feedback">
             <span *ngIf="f['emailEcole'].errors?.['required']">Champ obligatoire.</span>
             <span *ngIf="f['emailEcole'].errors?.['email']">Format e-mail invalide.</span>
@@ -24,134 +21,88 @@
         <!-- Origine -->
         <div class="form-group">
           <label>Origine</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="origine"
-            [ngClass]="{ 'is-invalid': submitted && f['origine'].invalid }" />
-          <div *ngIf="submitted && f['origine'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="origine"
+                 [ngClass]="{ 'is-invalid': submitted && f['origine'].invalid }" />
+          <div *ngIf="submitted && f['origine'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- École -->
         <div class="form-group">
           <label>École</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="ecole"
-            [ngClass]="{ 'is-invalid': submitted && f['ecole'].invalid }" />
-          <div *ngIf="submitted && f['ecole'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="ecole"
+                 [ngClass]="{ 'is-invalid': submitted && f['ecole'].invalid }" />
+          <div *ngIf="submitted && f['ecole'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Prénom -->
         <div class="form-group">
           <label>Prénom</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="prenom"
-            [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }" />
-          <div *ngIf="submitted && f['prenom'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="prenom"
+                 [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }" />
+          <div *ngIf="submitted && f['prenom'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Nom -->
         <div class="form-group">
           <label>Nom</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="nom"
-            [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }" />
-          <div *ngIf="submitted && f['nom'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="nom"
+                 [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }" />
+          <div *ngIf="submitted && f['nom'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Obligation Internationale -->
         <div class="form-group">
           <label>Obligation Internationale</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="obligationInternational"
-            [ngClass]="{ 'is-invalid': submitted && f['obligationInternational'].invalid }" />
-          <div *ngIf="submitted && f['obligationInternational'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="obligationInternational"
+                 [ngClass]="{ 'is-invalid': submitted && f['obligationInternational'].invalid }" />
+          <div *ngIf="submitted && f['obligationInternational'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Stage 1A -->
         <div class="form-group">
           <label>Stage 1A</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="stage1A"
-            [ngClass]="{ 'is-invalid': submitted && f['stage1A'].invalid }" />
-          <div *ngIf="submitted && f['stage1A'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="stage1A"
+                 [ngClass]="{ 'is-invalid': submitted && f['stage1A'].invalid }" />
+          <div *ngIf="submitted && f['stage1A'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Code classe -->
         <div class="form-group">
           <label>Code Classe</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="codeClasse"
-            [ngClass]="{ 'is-invalid': submitted && f['codeClasse'].invalid }" />
-          <div *ngIf="submitted && f['codeClasse'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="codeClasse"
+                 [ngClass]="{ 'is-invalid': submitted && f['codeClasse'].invalid }" />
+          <div *ngIf="submitted && f['codeClasse'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Nom groupe -->
         <div class="form-group">
           <label>Nom Groupe</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="nomGroupe"
-            [ngClass]="{ 'is-invalid': submitted && f['nomGroupe'].invalid }" />
-          <div *ngIf="submitted && f['nomGroupe'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="nomGroupe"
+                 [ngClass]="{ 'is-invalid': submitted && f['nomGroupe'].invalid }" />
+          <div *ngIf="submitted && f['nomGroupe'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
         <!-- Langue majeure -->
         <div class="form-group">
           <label>Langue Majeure</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="langueMajeure"
-            [ngClass]="{ 'is-invalid': submitted && f['langueMajeure'].invalid }" />
-          <div *ngIf="submitted && f['langueMajeure'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <input type="text" class="form-control" formControlName="langueMajeure"
+                 [ngClass]="{ 'is-invalid': submitted && f['langueMajeure'].invalid }" />
+          <div *ngIf="submitted && f['langueMajeure'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
-        <!-- INI / ALT -->
+        <!-- INI / ALT (liste déroulante) -->
         <div class="form-group">
           <label>INI / ALT</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="iniAlt"
-            [ngClass]="{ 'is-invalid': submitted && f['iniAlt'].invalid }" />
-          <div *ngIf="submitted && f['iniAlt'].invalid" class="invalid-feedback">
-            Champ obligatoire.
-          </div>
+          <select class="form-control" formControlName="iniAlt"
+                  [ngClass]="{ 'is-invalid': submitted && f['iniAlt'].invalid }">
+            <option value="">-- Sélectionner --</option>
+            <option value="INI">INI</option>
+            <option value="ALT">ALT</option>
+          </select>
+          <div *ngIf="submitted && f['iniAlt'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
 
-        <!-- Champs facultatifs (pas de validation obligatoire) -->
+        <!-- Champs facultatifs -->
         <div class="form-group">
           <label>Entreprise (facultatif)</label>
           <input type="text" class="form-control" formControlName="entreprise" />
@@ -177,13 +128,13 @@
           <input type="text" class="form-control" formControlName="departementRattachement" />
         </div>
 
-        <!-- Bouton -->
+        <!-- Bouton soumission -->
         <div class="text-center">
           <button type="submit" class="btn btn-submit">Créer l'Étudiant</button>
         </div>
       </form>
 
-      <!-- Alertes -->
+      <!-- Messages -->
       <div *ngIf="successMessage" class="alert alert-success success-alert mt-3 text-center">
         {{ successMessage }}
       </div>
