--- a/gestion-tutorat-front/src/app/components/tuteur-dashboard/tuteur-dashboard.component.html
+++ b/gestion-tutorat-front/src/app/components/tuteur-dashboard/tuteur-dashboard.component.html
@@ -10,7 +10,7 @@
       <div class="stat-value">{{ tuteur.departement }}</div>
     </div>
     <div class="stat-box">
-      <div class="stat-label">Total Étudiants Par</div>
+      <div class="stat-label">Total Étudiants PAR</div>
       <div class="stat-value">{{ tuteur.totalEtudiantsPar }}</div>
     </div>
     <div class="stat-box">
