--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -4,6 +4,8 @@
       <img src="assets/logo-imtbs.png" alt="Logo IMTBS" height="38" />
     </a>
 
+    
+
     <button
       class="navbar-toggler"
       type="button"
@@ -18,6 +20,11 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+
+        <li class="nav-item">
+  <a routerLink="/profil" routerLinkActive="active" class="nav-link">Mon Profil</a>
+</li>
+
 
         <!-- Connexion -->
         <li class="nav-item">
