--- a/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.css
+++ b/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.css
@@ -37,7 +37,7 @@
   flex-shrink: 0;
   width: 72px;
   height: 72px;
-  background: #b42978;
+  background: #9b59b6;
   color: #fff;
   font-size: 32px;
   font-weight: bold;
